src/test/compile-fail/return_type_mismatch.mmtn
// { "compile_status": "fail" }

struct Unit {}

fn main() -> u64 {
    Unit {}
}
